[project]
name = "slackblocks"
version = "1.2.4"
description = "Python wrapper for the Slack Blocks API"
authors = [
    { name = "Nicholas Lambourne", email = "dev@ndl.im" },
]
maintainers = [
    { name = "Nicholas Lambourne", email = "dev@ndl.im" },
]
homepage = "https://github.com/nicklambourne/slackblocks"
repository = "https://github.com/nicklambourne/slackblocks"
license = { text = "MIT" }
readme = "README.md"
keywords = [
    "slackblocks",
    "slack",
    "messaging",
    "message generation",
    "slack blocks",
    "blocks",
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: Communications :: Chat",
]
requires-python = ">=3.8.1"
exclude = ["test/**", "docs/**"]

[project.optional-dependencies]
dev = [
    "aiohttp>=3.10.11,<4.0.0",
    "black>=24.8.0,<25.0.0",
    "flake8>=6.1.0,<7.0.0",
    "flake8-pyproject>=1.2.3,<2.0.0",
    "mypy>=1.14.1,<2.0.0",
    "pytest>=8.3.4,<9.0.0",
    "slack-sdk>=3.33.4,<4.0.0",
    "twine>=6.0.1,<7.0.0",
    "wheel>=0.45.1,<1.0.0",
]
docs = [
    "mike>=2.1.3,<3.0.0",
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-material>=9.5.49,<10.0.0",
    "mkdocstrings[python]>=0.27.0; python_full_version >= '3.9'",
    "mkdocstrings-python>=1.13.0,<2.0.0; python_full_version >= '3.9'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.flake8]
exclude = [".venv", "./build", "./dist", ".eggs", ".git"]
max-line-length = 100
extend-ignore = """
    BLK100
"""
per-file-ignores = [
    "slackblocks/__init__.py:F401",
    "slackblocks/rich_text/__init__.py:F401",
    "slackblocks/rich_text/objects.py:W605",
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]

[tool.black]
target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true