[project]
name = "slackblocks"
version = "2.0.0.dev0"
description = "Python wrapper for the Slack Blocks API"
authors = [
    { name = "Nicholas Lambourne", email = "dev@ndl.im" },
]
maintainers = [
    { name = "Nicholas Lambourne", email = "dev@ndl.im" },
]
homepage = "https://github.com/nicklambourne/slackblocks"
repository = "https://github.com/nicklambourne/slackblocks"
license = { text = "MIT" }
readme = "README.md"
keywords = [
    "slackblocks",
    "slack",
    "messaging",
    "message generation",
    "slack blocks",
    "blocks",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: Communications :: Chat",
]
requires-python = ">=3.10"
exclude = ["test/**", "docs/**"]

[dependency-groups]
dev = [
    "aiohttp>=3.10.11,<4.0.0",
    "mypy>=1.14.1,<1.15.0",
    "pytest>=8.3.4,<9.0.0",
    "ruff>=0.8.0,<1.0.0",
    "slack-sdk>=3.33.4,<4.0.0",
    "twine>=6.0.1,<7.0.0",
    "wheel>=0.45.1,<1.0.0",
]
docs = [
    "mike>=2.1.3,<3.0.0",
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-material>=9.5.49,<10.0.0",
    "mkdocstrings[python]>=0.27.0",
    "mkdocstrings-python>=1.13.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "build", "dist", ".eggs", ".git"]

[tool.ruff.lint]
# pycodestyle (E,W) + pyflakes (F) + pyupgrade (UP). Additional rule families
# (B, SIM, I, TCH) can be enabled in a follow-up PR with their own targeted
# code changes.
select = ["E", "F", "UP", "W"]
# E501 (line-too-long) is handled by the formatter; don't lint it. Long lines
# in docstrings (e.g. Slack API URLs) can't be wrapped without breaking
# Markdown link rendering.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"slackblocks/__init__.py" = ["F401"]
"slackblocks/rich_text/__init__.py" = ["F401"]
"slackblocks/rich_text/objects.py" = ["W605"]

[tool.ruff.format]
# Black-compatible defaults; no overrides needed.

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]

